Fix missing </nav> tag causing lang switcher layout break

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,6 +67,7 @@ body {
 /* Override Cayman-style float on nav if present */
 .site-nav {
   float: none !important;
+  display: inline-block !important;
 }
 
 .header-lang-switcher {
